--- a/XamarinExploring/Views/PersonDetailsPage.xaml
+++ b/XamarinExploring/Views/PersonDetailsPage.xaml
@@ -7,24 +7,21 @@
 >
   <StackLayout>
     
-    <StackLayout x:Name="PersonStack">
+    <StackLayout 
+      x:Name="PersonStack"
+    >
       <Label Text="Name" />
-      <Entry Text="{Binding NewPerson.Name}" FontSize="Medium" />
+      <Entry Text="{Binding currentlyBeingEditedExistingPersonData.Name}" FontSize="Medium" />
       <Label Text="Email" />
-      <Entry Text="{Binding NewPerson.Email}" FontSize="Medium" />
+      <Entry Text="{Binding currentlyBeingEditedExistingPersonData.Email}" FontSize="Medium" />
       <Label Text="Phone" />
-      <Entry Text="{Binding NewPerson.Phone}" FontSize="Medium" />
+      <Entry Text="{Binding currentlyBeingEditedExistingPersonData.Phone}" FontSize="Medium" />
     </StackLayout>
     
     <StackLayout 
       Orientation="Horizontal" 
       HorizontalOptions="CenterAndExpand"
     >
-      <Button 
-        Text="Add"
-        Command="{Binding SaveNewPersonCommand}" 
-        CommandParameter="{Binding NewPerson}" 
-      />
       <Button 
         Text="Delete"
         Command="{Binding DeletePersonCommand}" 
